tests/snapshots/examples_fixtures/type_system__failing__36_pure_context_time_only_rejects_io.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/36_pure_context_time_only_rejects_io.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E400]: MISSING EFFECT

Call to `print` requires effect `IO` in this function signature.

  --> examples/type_system/failing/36_pure_context_time_only_rejects_io.flx:4:5
  |
4 |     print("tick")
  |     ^^^^^
  |     ----- effectful call occurs here

Hint:
  Add `with IO` to the enclosing function.


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify () -> Unit with Time with () -> Unit with IO.

  --> examples/type_system/failing/36_pure_context_time_only_rejects_io.flx:4:5
  |
4 |     print("tick")
  |     ^^^^^^^^^^^^^
  |     ------------- expected () -> Unit with Time, found () -> Unit with IO

Found 2 errors.
== stdout ==
<not executed>
